# dsr_mcp_server

./: .env.example  .gitignore  README.md  main.py  mcp.json  pyproject.toml  requirements.txt  server.json  server.py
.github/workflows/: build.yml
src/dsr_mcp_server/: __init__.py  __main__.py  config.py  dsr_client.py  response_utils.py  server.py
src/dsr_mcp_server/tools/: __init__.py  connection_tools.py  edge_tools.py  graph_tools.py  node_tools.py
